server was bugging because the url query string contained some characters the chromecast didn't like. the url string now users a base64 encoded string instead to make sure no weird charcters get in there. also added icons for play/pause/stop functions and tied their visibility to the current chromecast status.

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ h1{
     font-size:1rem;
     font-weight:bold;
 }
+a{
+    color:#35f;
+}
 button,a{
     cursor:pointer;
 }
@@ -18,6 +21,12 @@ button{
     color:#fff;
     border:1px solid #35f;
     padding:0.25rem;
+}
+button.a{
+    background:transparent;
+    border:0;
+    padding:0;
+    color:#35f;
 }
 input[type=text],input[type=range]{
     width:100%;
